--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 /public/hot
 /public/storage
 /storage/*.key
+/storage/logs/*.log
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/views/*
+/bootstrap/cache/*
+!/bootstrap/cache/.gitkeep
+!/storage/framework/cache/.gitkeep
+!/storage/framework/sessions/.gitkeep
+!/storage/framework/views/.gitkeep
 /vendor
 .env
 .env.backup
