Google reCAPTCHA v2 Checkbox

--- a/env.production.example
+++ b/env.production.example
@@ -62,8 +62,9 @@ MAIL_FROM_ADDRESS="noreply@yourdomain.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 # =================================================
-# Google reCAPTCHA v3
+# Google reCAPTCHA v2 Checkbox
 # Get keys at: https://www.google.com/recaptcha/admin
+# Choose "reCAPTCHA v2" -> "I'm not a robot" Checkbox
 # =================================================
 RECAPTCHA_SITE_KEY=YOUR_SITE_KEY
 RECAPTCHA_SECRET_KEY=YOUR_SECRET_KEY
