--- a/env.production.example
+++ b/env.production.example
@@ -62,12 +62,14 @@ MAIL_FROM_ADDRESS="noreply@yourdomain.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 # =================================================
-# Google reCAPTCHA v2 Checkbox
+# Google reCAPTCHA v3 (Invisible)
 # Get keys at: https://www.google.com/recaptcha/admin
-# Choose "reCAPTCHA v2" -> "I'm not a robot" Checkbox
+# Choose "reCAPTCHA v3" when creating keys
+# Min score: 0.0-1.0 (higher = more human-like, default: 0.5)
 # =================================================
-RECAPTCHA_SITE_KEY=YOUR_SITE_KEY
-RECAPTCHA_SECRET_KEY=YOUR_SECRET_KEY
+RECAPTCHA_SITE_KEY=YOUR_V3_SITE_KEY
+RECAPTCHA_SECRET_KEY=YOUR_V3_SECRET_KEY
+RECAPTCHA_MIN_SCORE=0.5
 
 # =================================================
 # Docker Configuration
