--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name _;
     root /var/www/html/public;
+    
+    # Disable sendfile to avoid Docker volume sync issues
+    sendfile off;
 
     # Cloudflare Tunnel - trust real IP from CF
     set_real_ip_from 0.0.0.0/0;
