feat: Improve text contrast and SEO optimization

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -37,9 +37,9 @@ server {
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
         
-        # Cloudflare HTTPS detection
-        fastcgi_param HTTPS on;
-        fastcgi_param HTTP_X_FORWARDED_PROTO https;
+        # Cloudflare HTTPS detection (enable in production only)
+        # fastcgi_param HTTPS on;
+        # fastcgi_param HTTP_X_FORWARDED_PROTO https;
     }
 
     # Deny access to sensitive files
@@ -51,8 +51,9 @@ server {
         deny all;
     }
 
-    # Static files caching
+    # Static files caching - with fallback to PHP for Livewire assets
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg)$ {
+        try_files $uri /index.php?$query_string;
         expires 30d;
         add_header Cache-Control "public, immutable";
     }
